# 2B

./: .gdbinit  .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config
esp32-c3-no-std/: Cargo.toml
esp32-c3-no-std/.cargo/: config
esp32-c3-no-std/src/: main.rs  panic.rs  peripherals.rs
scripts/: .gdbinit  flash_release.ps1  gdb.ps1  openocd.ps1
src/: counters.rs  main.rs  panic.rs  pers.rs  tasks.rs  utils.rs
src/rt/: device.rs  log.rs  mod.rs  panic.rs  tick.rs
