[package]
name = "2B"
version = "0.0.1"
publish = false
authors = ["Douman Ashiya <douman@gmx.se>"]
categories = ["embedded", "no-std"]
keywords = ["arm", "cortex-m", "template"]
license = "Apache-2.0"

[dependencies]
cortex-m = "0.4.0"
cortex-m-rtfm = "0.3.1"
embedded-hal = "0"
nb = "0"
# alloc-cortex-m release doesn't use linked_list_allocator v0.5.0 yet.
# Uncomment for the allocator example.
#alloc-cortex-m = "0.3.2"

[dependencies.cortex-m-rt]
version = "0.3.15"
# Comment for the panic example.
features = ["abort-on-panic"]

[dependencies.stm32l4x6-hal]
features = ["rt", "STM32L476VG"]
version = "0"

[dependencies.cortex-m-semihosting]
version = "0.2.0"
optional = true

[features]
default = []
debug = ["cortex-m-semihosting"]

[profile.dev]
incremental = false
lto = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
# higher level of optimization seems to break toggle function
# 1.26.0-nightly (06fa27d7c 2018-04-01)
opt-level = "z"
