[package]
name = "2B"
version = "0.0.1"
publish = false
authors = ["Douman Ashiya <douman@gmx.se>"]
categories = ["embedded", "no-std"]
keywords = ["arm", "cortex-m", "template"]
license = "Apache-2.0"

[dependencies]
cortex-m = "0.5"
#TODO: wait for RTFM ugprade
cortex-m-rtfm = "0.3"
embedded-hal = "0.2"
nb = "0.1"

[patch.crates-io]
stm32l4x6 = { git = 'https://github.com/DoumanAsh/stm32l4x6', branch = "svd_12_1" }

[dependencies.cortex-m-rt]
version = "0.5"
# Comment for the panic example.
features = ["device"]

[dependencies.stm32l4x6-hal]
features = ["rt", "STM32L476VG"]
path = "../stm32l4x6_hal"

[dependencies.panic-semihosting]
version = "0.2"
optional = true

[dependencies.panic-abort]
version = "0.1"
optional = true

[features]
default = ["debug"]
debug = ["panic-semihosting"]
release = ["panic-abort"]

[profile.dev]
incremental = false
lto = false

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
# higher level of optimization seems to break toggle function
# 1.26.0-nightly (06fa27d7c 2018-04-01)
opt-level = "z"
